--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ header .container .navigation-bar .form {
   justify-content: center;
   align-items: center;
   color: white;
-  z-index: 3;
+  z-index: 9999999999;
   transition: 0.3s ease;
 }
 .scroll-to-top:hover {
@@ -1147,7 +1147,7 @@ footer .container {
   flex-direction: column;
   justify-content: center;
   position: relative;
-  z-index: 1;
+  z-index: 5;
 }
 footer .container img {
   display: initial;
