--- a/css/style.css
+++ b/css/style.css
@@ -1069,6 +1069,7 @@ section.contact .contact-container form textarea {
   border: 1px solid #ccc;
   margin-bottom: 30px;
   width: 100%;
+  caret-color: var(--main-color);
 }
 
 section.contact .contact-container form textarea {
